# lesson_18

./: pyproject.toml  pytest.ini
tests/: test_demowebshop.py  test_reqres.py
utils/: base_session.py
