[tool.poetry]
name = "lesson-18"
version = "0.1.0"
description = ""
authors = ["chevchelios <keks1001@mail.ru>"]
readme = "README.md"
packages = [{include = "lesson_18"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
selene = "^2.0.0b16"
voluptuous = "^0.13.1"
allure-pytest = "^2.13.0"
python-dotenv = "^1.0.0"
pytest-voluptuous = "^1.2.0"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
